--- a/environment.yml
+++ b/environment.yml
@@ -1,59 +1,65 @@
-name: PymodaqEnv
+name: pymodaq_env
 channels:
   - conda-forge
   - defaults
 dependencies:
-  - bzip2=1.0.8=he774522_0
-  - ca-certificates=2023.11.17=h56e8100_0
-  - expat=2.5.0=hd77b12b_0
-  - icu=73.1=h6c2663c_0
-  - jpeg=9e=h8ffe710_2
-  - krb5=1.20.1=h5b6d351_0
+  - bzip2=1.0.8=hcfcfb64_5
+  - ca-certificates=2024.2.2=h56e8100_0
+  - icu=73.2=h63175ca_0
+  - jpeg=9e=hcfcfb64_3
+  - krb5=1.20.1=heb0366b_0
   - libclang=14.0.6=default_hb5a9fac_1
   - libclang13=14.0.6=default_h8e68704_1
-  - libffi=3.4.4=hd77b12b_0
-  - libpng=1.6.39=h8cc25b3_0
-  - libpq=12.15=h906ac69_1
-  - lz4-c=1.9.4=h2bbff1b_0
-  - openssl=3.0.12=h2bbff1b_0
+  - libexpat=2.5.0=h63175ca_1
+  - libffi=3.4.2=h8ffe710_5
+  - libpng=1.6.42=h19919ed_0
+  - libpq=12.17=h906ac69_0
+  - libsqlite=3.45.1=hcfcfb64_0
+  - libzlib=1.2.13=hcfcfb64_5
+  - openssl=3.2.1=hcfcfb64_0
   - packaging=23.2=pyhd8ed1ab_0
-  - pip=23.3.1=py312haa95532_0
+  - pip=24.0=pyhd8ed1ab_0
   - ply=3.11=py_1
   - pyqt=5.15.10=py312hd77b12b_0
   - pyqt5-sip=12.13.0=py312h2bbff1b_0
-  - python=3.12.0=h1d929f7_0
+  - python=3.12.0=h2628c8c_0_cpython
+  - python_abi=3.12=4_cp312
   - qt-main=5.15.2=h19c9488_10
-  - setuptools=68.2.2=py312haa95532_0
-  - sip=6.7.12=py312hd77b12b_0
-  - sqlite=3.41.2=h2bbff1b_0
-  - tk=8.6.12=h2bbff1b_0
-  - vc=14.2=h21ff451_1
-  - vs2015_runtime=14.27.29016=h5e58377_2
-  - wheel=0.41.2=py312haa95532_0
-  - xz=5.4.5=h8cc25b3_0
-  - zlib=1.2.13=h8cc25b3_0
-  - zstd=1.5.5=hd43e919_0
+  - setuptools=69.0.3=pyhd8ed1ab_0
+  - sip=6.7.12=py312h53d5487_0
+  - sqlite=3.45.1=hcfcfb64_0
+  - tk=8.6.13=h5226925_1
+  - tomli=2.0.1=pyhd8ed1ab_0
+  - tzdata=2024a=h0c530f3_0
+  - ucrt=10.0.22621.0=h57928b3_0
+  - vc=14.3=hcf57466_18
+  - vc14_runtime=14.38.33130=h82b7239_18
+  - vs2015_runtime=14.38.33130=hcb4865c_18
+  - wheel=0.42.0=pyhd8ed1ab_0
+  - xz=5.2.6=h8d14728_0
+  - zlib=1.2.13=hcfcfb64_5
+  - zstd=1.5.5=h12be248_0
   - pip:
       - asttokens==2.4.1
       - attrs==23.2.0
-      - blosc2==2.4.0
-      - certifi==2023.11.17
+      - blosc2==2.5.1
+      - certifi==2024.2.2
       - chardet==5.2.0
       - charset-normalizer==3.3.2
       - colorama==0.4.6
       - comm==0.2.1
       - dataproperty==1.0.1
-      - debugpy==1.8.0
+      - debugpy==1.8.1
       - decorator==5.1.1
       - distlib==0.3.8
       - docutils==0.20.1
-      - easydict==1.11
+      - easydict==1.12
       - executing==2.0.1
       - idna==3.6
-      - ipykernel==6.28.0
-      - ipython==8.20.0
+      - ipykernel==6.29.2
+      - ipython==8.21.0
       - jedi==0.19.1
-      - jsonschema==4.20.0
+      - jsonschema==4.21.1
       - jsonschema-specifications==2023.12.1
       - jupyter-client==8.6.0
       - jupyter-core==5.7.1
@@ -63,32 +69,27 @@ dependencies:
       - msgpack==1.0.7
       - multipledispatch==1.0.0
       - ndindex==1.7
-      - nest-asyncio==1.5.9
+      - nest-asyncio==1.6.0
       - nh3==0.2.15
-      - numexpr==2.8.8
-      - numpy==1.26.3
-      - pandas==2.1.4
+      - numexpr==2.9.0
+      - numpy==1.26.4
       - parso==0.8.3
       - pathvalidate==3.2.0
       - pint==0.23
-      - platformdirs==4.1.0
+      - platformdirs==4.2.0
       - prompt-toolkit==3.0.43
-      - psutil==5.9.7
+      - psutil==5.9.8
       - pure-eval==0.2.2
       - py-cpuinfo==9.0.0
-      - pydaqmx==1.4.6
       - pygments==2.17.2
-      - pymeasure==0.13.1
       - pymodaq==4.0.11
       - pymodaq-plugin-manager==1.2.2
-      - pymodaq-plugins-daqmx==0.3.1
-      - pymodaq-plugins-keithley==1.0.1
+      - pymodaq-plugins-keithley2700==0.0.1
       - pymodaq-plugins-mock==4.3.6
       - pyqtgraph==0.13.3
-      - pyserial==3.5
       - pytablewriter==1.2.0
       - python-dateutil==2.8.2
-      - pytz==2023.3.post1
+      - pytz==2024.1
       - pyvisa==1.14.1
       - pywin32==306
       - pyzmq==25.1.2
@@ -96,10 +97,10 @@ dependencies:
       - qtconsole==5.5.1
       - qtpy==2.4.1
       - readme-renderer==42.0
-      - referencing==0.32.1
+      - referencing==0.33.0
       - requests==2.31.0
       - rpds-py==0.17.1
-      - scipy==1.11.4
+      - scipy==1.12.0
       - simple-pid==2.0.0
       - six==1.16.0
       - stack-data==0.6.3
@@ -111,8 +112,7 @@ dependencies:
       - traitlets==5.14.1
       - typepy==1.3.2
       - typing-extensions==4.9.0
-      - tzdata==2023.4
-      - urllib3==2.1.0
+      - urllib3==2.2.0
       - wcwidth==0.2.13
       - yawrap==0.4.10
-prefix: c:\Users\sguerrero\Documents\git\Cethil-Acquisition\.conda\PymodaqEnv
+prefix: c:\Users\sguerrero\Documents\git\Cethil-Acquisition\.conda\pymodaq_env
