0D viewer running correctly

--- a/Keithley2700/pymodaq_plugins_keithley2700/src/pymodaq_plugins_keithley2700/k2700config.ini
+++ b/Keithley2700/pymodaq_plugins_keithley2700/src/pymodaq_plugins_keithley2700/k2700config.ini
@@ -1,8 +1,22 @@
-[INTRUMENT]
+[CONFIG]
+; must set the absolute path of this configuration file in the 2 following files:
+; daq_viewer_plugins\plugins_0d\daq_0dviewer_keithley2700.py
+; hardware\keithley2700_visadriver.py
+; example of absolute path: c:\users\[...]\k2700config.ini
+
+[INSTRUMENT]
+; modules
+modules = 7706
+; resource name
 rsrc_name = ASRL1::INSTR
+; termination character
 termination = LF
-panel = rear
+; front/rear panel
+panel = REAR
 
 [PARAMETERS]
-chan_to_read = 101,102
+; if more than 1, channels must be separated by a coma
+chan_to_read = 101,102,114,115,116,117,118,119,120
+; depending on your module, possible modes are vdc,vac,idc,iac,r2w,r4w,freq and temp
+chan_mode = TEMP,TEMP,vdc,vac,idc,iac,r2w,r4w,freq
 
