Keithley Driver v2 (scan_list + baseconfig)

--- a/Keithley2700/pymodaq_plugins_keithley2700/src/pymodaq_plugins_keithley2700/k2700config.ini
+++ b/Keithley2700/pymodaq_plugins_keithley2700/src/pymodaq_plugins_keithley2700/k2700config.ini
@@ -5,8 +5,6 @@
 ; example of absolute path: c:\users\[...]\k2700config.ini
 
 [INSTRUMENT]
-; modules
-modules = 7706
 ; resource name
 rsrc_name = ASRL1::INSTR
 ; termination character
@@ -14,9 +12,18 @@ termination = LF
 ; front/rear panel
 panel = REAR
 
+[MODULES]
+; modules
+modules = 7706
+
 [PARAMETERS]
 ; if more than 1, channels must be separated by a coma
-chan_to_read = 101,102,114,115,116,117,118,119,120
-; depending on your module, possible modes are vdc,vac,idc,iac,r2w,r4w,freq and temp
-chan_mode = TEMP,TEMP,vdc,vac,idc,iac,r2w,r4w,freq
+chan_to_read = 101,102,103
+; possible modes are vdc,vac,idc,iac,r2w,r4w,freq and temp
+chan_mode = TEMP,VDC
+101 = 101,102,103
+
+[CHAN_TO_READ]
+; here must appear each channel used during the acquisition with its mode
+; additional below are two examples
 
