0Dviewer v2.1 - auto scan channels to grab data

--- a/Keithley2700/pymodaq_plugins_keithley2700/src/pymodaq_plugins_keithley2700/resources/config_k2700_module7706.toml
+++ b/Keithley2700/pymodaq_plugins_keithley2700/src/pymodaq_plugins_keithley2700/resources/config_k2700_module7706.toml
@@ -5,17 +5,15 @@ rsrc_name = "ASRL1::INSTR"  # resource name
 termination = "LF"  # termination character
 panel = "REAR" # Front/rear panel
 
+[SAVING_TXT_DATA]
+path = ""
+
 [MODULE]
 module_name = 7706
 
 [CHANNELS]
-# Here must appear each channel used during the acquisition with its mode + additionals parameters if needed
-# Here are few examples (cf Manual User for an exhaustive list of each possibility):
-# 101 = {mode = 'freq'}
-# 102 = {mode = 'temp', transducer = 'tc', type = 'K', ref_junction = 'int', resolution = '6', nplc = 5}
-# 103 = {mode = 'volt:dc', range = 0.1, resolution = '6', nplc = 5}
-101 = {mode = 'temp', transducer = 'tc', type = 'K', ref_junction = 'int'}
-102 = {mode = 'temp', transducer = 'tc', type = 'K', ref_junction = 'int', resolution = 6, nplc = 5}
+101 = {}
+102 = {}
 103 = {}
 104 = {}
 105 = {}
