--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,9 +24,13 @@ test:
   tags: 
   - python
   script:
-    - sphinx -apidocs -o docs Keithley2700/ymodaq_plugins_keithley2700/src/pymodaq_plugins_keithley2700
-    - cd docs
-    - make html # build to public path
+    - conda create --name PymodaqCI python=3.8
+    - conda install -n PymodaqCI pyqt
+    - conda install -n PymodaqCI sphinx
+    - conda run -n PymodaqCI pip install pymodaq==4.0.11 sphinx-rtd-theme
+    - conda install -n PymodaqCI pyvisa
+    - conda run -n PymodaqCI sphinx -apidocs -o docs Keithley2700/ymodaq_plugins_keithley2700/src/pymodaq_plugins_keithley2700
+    - conda run -n PymodaqCI -cwd docs make html
   only:
     - master # this job will affect every branch except 'master'
   # except:
