--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,7 @@ test:
   tags: 
   - python
   script:
+    - pwd && ls
     - conda create --name PymodaqCI python=3.8
     - conda update conda
     - conda config --add channels conda-forge
