--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,8 @@ test:
     - conda run -n PymodaqCI pip install pymodaq==4.0.11 sphinx-rtd-theme
     - conda install -n PymodaqCI pyvisa
     - conda run -n PymodaqCI sphinx-apidoc -o docs Keithley2700/pymodaq_plugins_keithley2700/src/pymodaq_plugins_keithley2700
-    - conda run -n PymodaqCI -cwd docs make html
+    - conda run -n PymodaqCI cd docs
+    - conda run -n PymodaqCI make html
   only:
     - master # this job will affect every branch except 'master'
   # except:
