--- a/docs/Makefile
+++ b/docs/Makefile
@@ -6,7 +6,7 @@
 SPHINXOPTS    ?=
 SPHINXBUILD   ?= sphinx-build
 SOURCEDIR     = .
-BUILDDIR      = ../public
+BUILDDIR      = ../doc
 
 # Put it first so that "make" without argument is like "make help".
 help:
