[docs] pyqt5 installation via pip

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ pages:
     - conda update conda
     - conda config --add channels conda-forge
     - conda install -n PymodaqCI pyqt sphinx pyvisa
-    - conda run -n PymodaqCI pip install pyqt pymodaq==4.0.11 sphinx-rtd-theme
+    - conda run -n PymodaqCI pip install pyqt5 pymodaq==4.0.11 sphinx-rtd-theme
     - conda run -n PymodaqCI sphinx-apidoc -o docs Keithley2700/pymodaq_plugins_keithley2700/src/pymodaq_plugins_keithley2700
     - conda run -n PymodaqCI --cwd docs make html
     - ls
@@ -19,6 +19,7 @@ pages:
     - master # this job will affect every branch except 'master'
   artifacts:
     paths:
-      - public
+      - doc
+  publish: doc
 
 
