--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ pages:
   - python
   script:
     - apt update
-    - apt install make python3-pyqt5
+    - apt -y install make python3-pyqt5
     - conda create --name PymodaqCI python=3.8
     - conda update conda
     - conda config --add channels conda-forge
