[dev] Driver choose config file from *IDN

--- a/Keithley/pymodaq_plugins_keithley/src/pymodaq_plugins_keithley/resources/config_k2700_module7706.toml
+++ b/Keithley/pymodaq_plugins_keithley/src/pymodaq_plugins_keithley/resources/config_k2700_module7706.toml
@@ -1,8 +1,9 @@
 title = "Config file for the keithley plugin using a 7708 acquisition card"
+termination_character = "Keithley must be set to LF"
 
 [INSTRUMENT]
 rsrc_name = ""
-termination = ""
+
 panel = ""
 
 [MODULE]
