--- a/environment.yml
+++ b/environment.yml
@@ -1,118 +1,128 @@
-name: pymodaq_env
+name: PmdqNetwork
 channels:
   - conda-forge
   - defaults
 dependencies:
   - bzip2=1.0.8=hcfcfb64_5
   - ca-certificates=2024.2.2=h56e8100_0
+  - glib=2.80.2=h0df6a38_0
+  - glib-tools=2.80.2=h2f9d560_0
+  - gst-plugins-base=1.24.4=hba88be7_0
+  - gstreamer=1.24.4=h5006eae_0
   - icu=73.2=h63175ca_0
-  - jpeg=9e=hcfcfb64_3
-  - krb5=1.20.1=heb0366b_0
-  - libclang=14.0.6=default_hb5a9fac_1
-  - libclang13=14.0.6=default_h8e68704_1
-  - libexpat=2.5.0=h63175ca_1
+  - krb5=1.21.2=heb0366b_0
+  - libclang13=18.1.6=default_hf64faad_0
   - libffi=3.4.2=h8ffe710_5
-  - libpng=1.6.42=h19919ed_0
-  - libpq=12.17=h906ac69_0
-  - libsqlite=3.45.1=hcfcfb64_0
-  - libzlib=1.2.13=hcfcfb64_5
-  - openssl=3.2.1=hcfcfb64_0
-  - packaging=23.2=pyhd8ed1ab_0
+  - libglib=2.80.2=h0df6a38_0
+  - libiconv=1.17=hcfcfb64_2
+  - libintl=0.22.5=h5728263_2
+  - libintl-devel=0.22.5=h5728263_2
+  - libjpeg-turbo=3.0.0=hcfcfb64_1
+  - libogg=1.3.4=h8ffe710_1
+  - libpng=1.6.43=h19919ed_0
+  - libsqlite=3.45.3=hcfcfb64_0
+  - libvorbis=1.3.7=h0e60522_0
+  - libzlib=1.3.1=h2466b09_1
+  - openssl=3.3.0=h2466b09_3
+  - packaging=24.0=pyhd8ed1ab_0
+  - pcre2=10.43=h17e33f8_0
   - pip=24.0=pyhd8ed1ab_0
-  - ply=3.11=py_1
-  - pyqt=5.15.10=py312hd77b12b_0
-  - pyqt5-sip=12.13.0=py312h2bbff1b_0
-  - python=3.12.0=h2628c8c_0_cpython
-  - python_abi=3.12=4_cp312
-  - qt-main=5.15.2=h19c9488_10
-  - setuptools=69.0.3=pyhd8ed1ab_0
-  - sip=6.7.12=py312h53d5487_0
-  - sqlite=3.45.1=hcfcfb64_0
+  - ply=3.11=pyhd8ed1ab_2
+  - pyqt=5.15.9=py38hd6c051e_5
+  - pyqt5-sip=12.12.2=py38hd3f51b4_5
+  - python=3.8.19=h4de0772_0_cpython
+  - python_abi=3.8=4_cp38
+  - qt-main=5.15.8=hcef0176_21
+  - setuptools=70.0.0=pyhd8ed1ab_0
+  - sip=6.7.12=py38hd3f51b4_0
   - tk=8.6.13=h5226925_1
+  - toml=0.10.2=pyhd8ed1ab_0
   - tomli=2.0.1=pyhd8ed1ab_0
-  - tzdata=2024a=h0c530f3_0
   - ucrt=10.0.22621.0=h57928b3_0
-  - vc=14.3=hcf57466_18
-  - vc14_runtime=14.38.33130=h82b7239_18
-  - vs2015_runtime=14.38.33130=hcb4865c_18
-  - wheel=0.42.0=pyhd8ed1ab_0
+  - vc=14.3=ha32ba9b_20
+  - vc14_runtime=14.38.33135=h835141b_20
+  - vs2015_runtime=14.38.33135=h22015db_20
+  - wheel=0.43.0=pyhd8ed1ab_1
   - xz=5.2.6=h8d14728_0
-  - zlib=1.2.13=hcfcfb64_5
-  - zstd=1.5.5=h12be248_0
+  - zstd=1.5.6=h0ea2cb4_0
   - pip:
       - asttokens==2.4.1
       - attrs==23.2.0
-      - blosc2==2.5.1
+      - backcall==0.2.0
+      - blosc2==2.0.0
       - certifi==2024.2.2
       - chardet==5.2.0
       - charset-normalizer==3.3.2
       - colorama==0.4.6
-      - comm==0.2.1
+      - comm==0.2.2
+      - cython==3.0.10
       - dataproperty==1.0.1
       - debugpy==1.8.1
       - decorator==5.1.1
       - distlib==0.3.8
       - docutils==0.20.1
-      - easydict==1.12
+      - easydict==1.13
       - executing==2.0.1
-      - idna==3.6
-      - ipykernel==6.29.2
-      - ipython==8.21.0
+      - idna==3.7
+      - importlib-metadata==7.1.0
+      - importlib-resources==6.4.0
+      - ipykernel==6.29.4
+      - ipython==8.12.3
       - jedi==0.19.1
-      - jsonschema==4.21.1
+      - jsonschema==4.22.0
       - jsonschema-specifications==2023.12.1
-      - jupyter-client==8.6.0
-      - jupyter-core==5.7.1
-      - lxml==5.1.0
-      - matplotlib-inline==0.1.6
+      - jupyter-client==8.6.2
+      - jupyter-core==5.7.2
+      - lxml==5.2.2
+      - matplotlib-inline==0.1.7
       - mbstrdecoder==1.1.3
-      - msgpack==1.0.7
+      - msgpack==1.0.8
       - multipledispatch==1.0.0
-      - ndindex==1.7
       - nest-asyncio==1.6.0
-      - nh3==0.2.15
-      - numexpr==2.9.0
-      - numpy==1.26.4
-      - parso==0.8.3
+      - nh3==0.2.17
+      - numexpr==2.8.6
+      - numpy==1.24.4
+      - parso==0.8.4
       - pathvalidate==3.2.0
-      - pint==0.23
-      - platformdirs==4.2.0
-      - prompt-toolkit==3.0.43
+      - pickleshare==0.7.5
+      - pint==0.21.1
+      - pkgutil-resolve-name==1.3.10
+      - platformdirs==4.2.2
+      - prompt-toolkit==3.0.45
       - psutil==5.9.8
       - pure-eval==0.2.2
       - py-cpuinfo==9.0.0
-      - pygments==2.17.2
+      - pygments==2.18.0
       - pymodaq==4.0.11
-      - pymodaq-plugin-manager==1.2.2
-      - pymodaq-plugins-keithley2700==0.0.1
+      - pymodaq-plugin-manager==1.2.3
       - pymodaq-plugins-mock==4.3.6
       - pyqtgraph==0.13.3
       - pytablewriter==1.2.0
-      - python-dateutil==2.8.2
+      - python-dateutil==2.9.0.post0
       - pytz==2024.1
       - pyvisa==1.14.1
       - pywin32==306
-      - pyzmq==25.1.2
+      - pyzmq==26.0.3
       - qdarkstyle==3.2.3
-      - qtconsole==5.5.1
+      - qtconsole==5.5.2
       - qtpy==2.4.1
-      - readme-renderer==42.0
-      - referencing==0.33.0
-      - requests==2.31.0
-      - rpds-py==0.17.1
-      - scipy==1.12.0
+      - readme-renderer==43.0
+      - referencing==0.35.1
+      - requests==2.32.3
+      - rpds-py==0.18.1
+      - scipy==1.10.1
       - simple-pid==2.0.0
       - six==1.16.0
       - stack-data==0.6.3
       - tabledata==1.3.3
-      - tables==3.9.2
-      - tcolorpy==0.1.4
-      - toml==0.10.2
+      - tables==3.8.0
+      - tcolorpy==0.1.6
       - tornado==6.4
-      - traitlets==5.14.1
+      - traitlets==5.14.3
       - typepy==1.3.2
-      - typing-extensions==4.9.0
-      - urllib3==2.2.0
+      - typing-extensions==4.12.0
+      - urllib3==2.2.1
       - wcwidth==0.2.13
       - yawrap==0.4.10
-prefix: c:\Users\sguerrero\Documents\git\Cethil-Acquisition\.conda\pymodaq_env
+      - zipp==3.19.0
+prefix: c:\Users\sguerrero\Documents\git\Cethil-Acquisition\.conda\PmdqNetwork
