[dev] update termination LF by default

--- a/Keithley2700/pymodaq_plugins_keithley2700/src/pymodaq_plugins_keithley2700/resources/config_k2700_module7706.toml
+++ b/Keithley2700/pymodaq_plugins_keithley2700/src/pymodaq_plugins_keithley2700/resources/config_k2700_module7706.toml
@@ -1,8 +1,8 @@
 title = "Config file for the keithley2700 plugin using a 7706 acquisition card"
+termination_character = "Keithley must be set to LF"
 
 [INSTRUMENT]
 rsrc_name = ""
-termination = ""
 panel = ""
 
 [MODULE]
