--- a/environment.yml
+++ b/environment.yml
@@ -1,15 +1,22 @@
-name: PmdqNetwork
+name: Pmdq_Cethil
 channels:
   - conda-forge
   - defaults
 dependencies:
+  - alabaster=0.7.12=pyhd3eb1b0_0
+  - babel=2.11.0=py38haa95532_0
+  - brotli-python=1.0.9=py38hd77b12b_8
   - bzip2=1.0.8=hcfcfb64_5
-  - ca-certificates=2024.2.2=h56e8100_0
+  - ca-certificates=2024.3.11=haa95532_0
+  - colorama=0.4.6=py38haa95532_0
   - glib=2.80.2=h0df6a38_0
   - glib-tools=2.80.2=h2f9d560_0
   - gst-plugins-base=1.24.4=hba88be7_0
   - gstreamer=1.24.4=h5006eae_0
   - icu=73.2=h63175ca_0
+  - idna=3.7=py38haa95532_0
+  - imagesize=1.4.1=py38haa95532_0
+  - jinja2=3.1.4=py38haa95532_0
   - krb5=1.21.2=heb0366b_0
   - libclang13=18.1.6=default_hf64faad_0
   - libffi=3.4.2=h8ffe710_5
@@ -23,6 +30,7 @@ dependencies:
   - libsqlite=3.45.3=hcfcfb64_0
   - libvorbis=1.3.7=h0e60522_0
   - libzlib=1.3.1=h2466b09_1
+  - markupsafe=2.1.3=py38h2bbff1b_0
   - openssl=3.3.0=h2466b09_3
   - packaging=24.0=pyhd8ed1ab_0
   - pcre2=10.43=h17e33f8_0
@@ -30,19 +38,31 @@ dependencies:
   - ply=3.11=pyhd8ed1ab_2
   - pyqt=5.15.9=py38hd6c051e_5
   - pyqt5-sip=12.12.2=py38hd3f51b4_5
+  - pysocks=1.7.1=py38haa95532_0
   - python=3.8.19=h4de0772_0_cpython
   - python_abi=3.8=4_cp38
+  - pytz=2024.1=py38haa95532_0
   - qt-main=5.15.8=hcef0176_21
   - setuptools=70.0.0=pyhd8ed1ab_0
   - sip=6.7.12=py38hd3f51b4_0
+  - snowballstemmer=2.2.0=pyhd3eb1b0_0
+  - sphinx=5.0.2=py38haa95532_0
+  - sphinxcontrib-applehelp=1.0.2=pyhd3eb1b0_0
+  - sphinxcontrib-devhelp=1.0.2=pyhd3eb1b0_0
+  - sphinxcontrib-htmlhelp=2.0.0=pyhd3eb1b0_0
+  - sphinxcontrib-jsmath=1.0.1=pyhd3eb1b0_0
+  - sphinxcontrib-qthelp=1.0.3=pyhd3eb1b0_0
+  - sphinxcontrib-serializinghtml=1.1.5=pyhd3eb1b0_0
   - tk=8.6.13=h5226925_1
   - toml=0.10.2=pyhd8ed1ab_0
   - tomli=2.0.1=pyhd8ed1ab_0
   - ucrt=10.0.22621.0=h57928b3_0
+  - urllib3=2.2.1=py38haa95532_0
   - vc=14.3=ha32ba9b_20
   - vc14_runtime=14.38.33135=h835141b_20
   - vs2015_runtime=14.38.33135=h22015db_20
   - wheel=0.43.0=pyhd8ed1ab_1
+  - win_inet_pton=1.1.0=py38haa95532_0
   - xz=5.2.6=h8d14728_0
   - zstd=1.5.6=h0ea2cb4_0
   - pip:
@@ -53,7 +73,6 @@ dependencies:
       - certifi==2024.2.2
       - chardet==5.2.0
       - charset-normalizer==3.3.2
-      - colorama==0.4.6
       - comm==0.2.2
       - cython==3.0.10
       - dataproperty==1.0.1
@@ -63,7 +82,7 @@ dependencies:
       - docutils==0.20.1
       - easydict==1.13
       - executing==2.0.1
-      - idna==3.7
+      - greenlet==3.0.3
       - importlib-metadata==7.1.0
       - importlib-resources==6.4.0
       - ipykernel==6.29.4
@@ -90,6 +109,7 @@ dependencies:
       - platformdirs==4.2.2
       - prompt-toolkit==3.0.45
       - psutil==5.9.8
+      - psycopg2==2.9.9
       - pure-eval==0.2.2
       - py-cpuinfo==9.0.0
       - pygments==2.18.0
@@ -99,7 +119,6 @@ dependencies:
       - pyqtgraph==0.13.3
       - pytablewriter==1.2.0
       - python-dateutil==2.9.0.post0
-      - pytz==2024.1
       - pyvisa==1.14.1
       - pywin32==306
       - pyzmq==26.0.3
@@ -113,6 +132,10 @@ dependencies:
       - scipy==1.10.1
       - simple-pid==2.0.0
       - six==1.16.0
+      - sphinx-rtd-theme==2.0.0
+      - sphinxcontrib-jquery==4.1
+      - sqlalchemy==2.0.30
+      - sqlalchemy-utils==0.41.2
       - stack-data==0.6.3
       - tabledata==1.3.3
       - tables==3.8.0
@@ -121,8 +144,7 @@ dependencies:
       - traitlets==5.14.3
       - typepy==1.3.2
       - typing-extensions==4.12.0
-      - urllib3==2.2.1
       - wcwidth==0.2.13
       - yawrap==0.4.10
       - zipp==3.19.0
-prefix: c:\Users\sguerrero\Documents\git\Cethil-Acquisition\.conda\PmdqNetwork
+prefix: C:\Users\sguerrero\.conda\envs\PmdqNetwork
